test/compile_errors/err_keyword_as_var_it.w
//! expect-check-fail: expected identifier
let it = 42
fn main:
    let x = 1
